fixing html script + add triangles from prompt

--- a/webGL/main.html
+++ b/webGL/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <script src="index.js"></script>
+        <script src="triangles.js"></script>
     </body>
 </html>
-
